--- a/src/style.css
+++ b/src/style.css
@@ -9,11 +9,10 @@ html
     background: #1e1a20;
 }
 
-/* html,
 body
 {
     overflow: hidden;
-} */
+}
 
 .webgl
 {
@@ -41,4 +40,62 @@ body
 section:nth-child(odd)
 {
     justify-content: flex-end;
+}
+
+.spaceman
+{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    top: 20%;
+    width: 100%;
+    animation: rotation 8s infinite linear;
+}
+
+@keyframes rotation 
+{
+    from {
+        transform: rotate(0deg);
+      }
+      to {
+        transform: rotate(359deg);
+      }
+    }
+
+.loading-bar 
+{
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    height: 2px;
+    background: #ffffff;
+    transform: scaleX(0);
+    transform-origin: top left;
+    transition: transform 0.5s;
+    will-change: transform;
+}
+
+.loading-text
+{
+    position: absolute;
+    width: 100%;
+    top: 70%;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 25px;
+    text-align: center;
+}
+
+.loading-bar.ended
+{
+    transform-origin: top right;
+    transition: transform 1.5s ease-in-out;
+}
+
+.spaceman.ended{
+    display: none;
+}
+
+.loading-text.ended{
+    display: none;
 }
